2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_mount): Transform out of range into
	badfs.
	Reported by: TiCPU.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (insert_array): Display RAID name in duplicate
	members errors.

2011-01-09  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub.d/10_netbsd.in (netbsd_load_fs_module): New function.
	(netbsd_entry): Use netbsd_load_fs_module() to load filesystem module.

2011-01-09  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Handle
	openbsd and netbsd types being in part_bsd module.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* config.h.in (_LARGEFILE_SOURCE): Add missing define.
	(_FILE_OFFSET_BITS): Likewise.
	Reported by: Seth Goldberg.

2011-01-08  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Check for libdevmapper header.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (dmu_read): Use void * for some pointers to
	avoid aliasing.
	(fzap_lookup): Likewise.
	(dnode_get): Likewise.
	(make_mdn): Likewise.
	(zfs_mount): Likewise.
	(fzap_iterate): Use temporary pointer to avoid aliasing.
	(grub_zfs_read): Likewise.
	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Likewise.
	* grub-core/loader/xnu.c (grub_cmd_xnu_kernel): Use void * for some
	pointers to avoid aliasing.
	(grub_cmd_xnu_kernel64): Likewise.
	(grub_xnu_load_driver): Likewise.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/terminal.c (grub_cmd_terminal_input): Silence
	aliasing warning.
	(grub_cmd_terminal_output): Likewise.
	Reported and tested by: Grégoire Sutre.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (grub_keyboard_getkey): Silence spurious
	warning.
	Reported and tested by: Grégoire Sutre.

2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>
